# h5i-context2map

./: Cargo.toml  README.md  commit.md  install.sh  main.md  manifests.jsonl  trace.md
crates/c2m-cli/: Cargo.toml
crates/c2m-cli/src/: bench.rs  main.rs  ops.rs  providers.rs
crates/c2m-core/: Cargo.toml
crates/c2m-core/src/: analysis.rs  embed.rs  graph.rs  hazard.rs  history.rs  ingest.rs  lib.rs  parse.rs  regions.rs  relevance.rs  tokens.rs
crates/c2m-eval/: Cargo.toml
crates/c2m-eval/src/: lib.rs  live.rs  probes.rs
crates/c2m-index/: Cargo.toml
crates/c2m-index/src/: cache.rs  handles.rs  legend.rs  lib.rs  sidecar.rs  workspace.rs
crates/c2m-layout/: Cargo.toml
crates/c2m-layout/src/: field.rs  grid.rs  lib.rs  trace.rs
crates/c2m-render/: Cargo.toml
crates/c2m-render/src/: lib.rs  paint.rs  scene.rs  theme.rs  theme_parchment.rs  theme_vlm.rs
crates/ctx2img-cli/src/: ops.rs
crates/ctx2img-render/src/: lib.rs  theme.rs  theme_vlm.rs
docs/: DESIGN.md
git-goals/: wip.md
skills/c2m/: SKILL.md
snapshots/: 00bfd05e.md  043b4344.md  1af83620.md  1d6fc7c8.md  27a496f8.md  2aa6226d.md  5b3856e6.md  660b83c7.md  6772f35f.md  691c8590.md  710e95ee.md  71e11f78.md  72a8b194.md  80d9fe36.md  826ba950.md  936bf86b.md  9a540743.md  9e96fb6e.md  a77a0d07.md  ce3f9fe1.md  ee4f2c20.md  f79bedad.md
