[package]
name = "c2m-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "c2m"
path = "src/main.rs"

[dependencies]
c2m-core.workspace = true
c2m-index.workspace = true
c2m-layout.workspace = true
c2m-render.workspace = true
c2m-eval.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
