[package]
name = "c2m-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
c2m-core.workspace = true
c2m-index.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
