[package]
name = "c2m-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
c2m-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
